--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	},
 	"require-dev": {
 		"way/generators": "~2.0",
-		"fzaninotto/faker": "~1.4"
+		"fzaninotto/faker": "~1.4",
+        "phpunit/phpunit": "4.4.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -19,6 +20,7 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
+			"app/tests/ApiTester.php",
             "app/Kplus"
 		]
 	},
