--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
-			"app/tests/ApiTester.php",
-            "app/Kplus"
+			"app/tests/ApiTester.php"
 		]
 	},
 	"scripts": {
